test/classes/initializers/phase1/enumFieldNoUseBad.good
enumFieldNoUseBad.chpl:8: error: 'blue' undeclared (first use this function)
